apps/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: main-gw
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
    - type: NamedAddress
      value: gke-ip
  listeners:
    - name: main-gw
      protocol: HTTPS
      hostname: gke.irori235.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-gw-tls
            kind: Secret
            group: ""
    - name: main-gw-wildcard
      protocol: HTTPS
      hostname: "*.gke.irori235.dev"
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-gw-wildcard-tls
            kind: Secret
            group: ""
