apps/argocd.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-http
spec:
  parentRefs:
    - kind: Gateway
      name: main-gw
      namespace: istio-gateway
  hostnames:
    - cd.gke.irori235.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
